--- a/package.json
+++ b/package.json
@@ -3,57 +3,70 @@
   "version": "3.1.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.12.3",
+    "ansi-styles": "^3.2.1",
     "@babel/code-frame": "^7.10.4",
-    "@babel/highlight": "^7.10.4",
     "@babel/compat-data": "^7.13.15",
+    "@babel/core": "^7.12.3",
     "@babel/generator": "^7.12.11",
-    "@babel/helper-module-transforms": "^7.12.1",
-    "@babel/helper-module-imports": "^7.12.13",
-    "@babel/helper-plugin-utils": "^7.13.0",
     "@babel/helper-annotate-as-pure": "^7.12.13",
     "@babel/helper-builder-binary-assignment-operator-visitor": "^7.12.13",
-    "@babel/helper-validator-identifier": "^7.12.11",
-    "@babel/helper-validator-option": "^7.12.17",
-    "@babel/helper-explode-assignable-expression": "^7.12.13",
-    "@babel/helper-define-polyfill-provider": "^0.2.0",
     "@babel/helper-compilation-targets": "^7.13.16",
     "@babel/helper-create-class-features-plugin": "^7.13.11",
-    "@babel/helper-function-name": "^7.12.13",
-    "@babel/helper-member-expression-to-functions": "^7.13.0",
-    "@babel/helper-optimise-call-expression": "^7.12.13",
-    "@babel/helper-replace-supers": "^7.13.0",
-    "@babel/helper-split-export-declaration": "^7.12.13",
-    "@babel/helper-get-function-arity": "^7.12.13",
     "@babel/helper-create-regexp-features-plugin": "^7.12.17",
+    "@babel/helper-define-polyfill-provider": "^0.2.0",
+    "@babel/helper-explode-assignable-expression": "^7.12.13",
+    "@babel/helper-function-name": "^7.12.13",
+    "@babel/helper-get-function-arity": "^7.12.13",
+    "@babel/helper-hoist-variables": "^7.13.16",
+    "@babel/helper-member-expression-to-functions": "^7.13.0",
+    "@babel/helper-module-imports": "^7.12.13",
+    "@babel/helper-module-transforms": "^7.12.1",
+    "@babel/helper-optimise-call-expression": "^7.12.13",
+    "@babel/plugin-bugfix-v8-spread-parameters-in-optional-chaining": "^7.13.12",
+    "@babel/plugin-proposal-optional-chaining": "^7.13.12",
+    "@babel/plugin-proposal-async-generator-functions": "^7.13.15",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-syntax-async-generators": "^7.8.4",
+    "@babel/helper-plugin-utils": "^7.13.0",
+    "@babel/helper-remap-async-to-generator": "^7.13.0",
+    "@babel/helper-replace-supers": "^7.13.0",
+    "@babel/helper-simple-access": "^7.12.1",
+    "@babel/helper-skip-transparent-expression-wrappers": "^7.12.1",
+    "@babel/helper-split-export-declaration": "^7.12.13",
+    "@babel/helper-validator-identifier": "^7.12.11",
+    "@babel/helper-validator-option": "^7.12.17",
+    "@babel/helper-wrap-function": "^7.13.0",
     "@babel/helpers": "^7.12.1",
+    "@babel/highlight": "^7.10.4",
     "@babel/parser": "^7.12.3",
     "@babel/template": "^7.10.4",
     "@babel/traverse": "^7.12.1",
     "@babel/types": "^7.12.13",
-    "browserslist": "^4.14.5",
-    "convert-source-map": "^1.7.0",
-    "debug": "^4.1.0",
-    "gensync": "^1.0.0",
-    "json5": "^2.1.2",
-    "lodash": "^4.17.19",
-    "lodash.debounce": "^4.0.8",
-    "resolve": "^1.3.2",
-    "semver": "^5.4.1",
-    "source-map": "^0.5.7"
     "@mapbox/svg-react-transformer-loader": "^1.0.6",
     "babel-plugin-react-require": "^3.0.1",
     "babel-plugin-root-import": "^6.1.0",
     "babel-plugin-transform-define": "^1.3.0",
+    "browserslist": "^4.14.5",
+    "chalk": "^2.0.0",
+    "color-convert": "^1.9.0",
+    "color-name": "^1.1.3",
+    "convert-source-map": "^1.7.0",
     "css-reset-and-normalize": "^1.0.1",
+    "debug": "^4.1.0",
+    "escape-string-regexp": "^1.0.5",
     "file-saver": "^2.0.2",
     "flipnote.js": "^5.4.2",
+    "gensync": "^1.0.0",
+    "globals": "^11.1.0",
+    "has-flag": "^3.0.0",
     "hotkeys-js": "^3.6.13",
     "immer": "^3.1.3",
-    "jszip": "^3.2.2",
+    "js-tokens": "^4.0.0",
     "jsesc": "^2.5.1",
-    "chalk": "^2.0.0",
-    "js-tokens": "^4.0.0"
+    "json5": "^2.1.2",
+    "jszip": "^3.2.2",
+    "lodash": "^4.17.19",
+    "lodash.debounce": "^4.0.8",
     "node-sass": "^4.12.0",
     "poi": "^12.10.3",
     "pullstate": "^1.3.1",
@@ -63,9 +76,12 @@
     "react-router-dom": "^4.3.1",
     "react-transition-group": "^2.9.0",
     "regexpu-core": "^4.7.1",
+    "resolve": "^1.3.2",
     "sass-loader": "^7.1.0",
-    "to-fast-properties": "^2.0.0",
-    "globals": "^11.1.0"
+    "semver": "^5.4.1",
+    "source-map": "^0.5.7",
+    "supports-color": "^5.3.0",
+    "to-fast-properties": "^2.0.0"
   },
   "scripts": {
     "dev": "poi --serve",
