--- a/package.json
+++ b/package.json
@@ -3,85 +3,66 @@
   "version": "3.1.0",
   "private": true,
   "dependencies": {
-    "ansi-styles": "^3.2.1",
-    "@babel/code-frame": "^7.10.4",
-    "@babel/compat-data": "^7.13.15",
-    "@babel/core": "^7.12.3",
-    "@babel/generator": "^7.12.11",
-    "@babel/helper-annotate-as-pure": "^7.12.13",
-    "@babel/helper-builder-binary-assignment-operator-visitor": "^7.12.13",
-    "@babel/helper-compilation-targets": "^7.13.16",
-    "@babel/helper-create-class-features-plugin": "^7.13.11",
-    "@babel/helper-create-regexp-features-plugin": "^7.12.17",
-    "@babel/helper-define-polyfill-provider": "^0.2.0",
-    "@babel/helper-explode-assignable-expression": "^7.12.13",
-    "@babel/helper-function-name": "^7.12.13",
-    "@babel/helper-get-function-arity": "^7.12.13",
-    "@babel/helper-hoist-variables": "^7.13.16",
-    "@babel/helper-member-expression-to-functions": "^7.13.0",
-    "@babel/helper-module-imports": "^7.12.13",
-    "@babel/helper-module-transforms": "^7.12.1",
-    "@babel/helper-optimise-call-expression": "^7.12.13",
-    "@babel/plugin-bugfix-v8-spread-parameters-in-optional-chaining": "^7.13.12",
-    "@babel/plugin-proposal-optional-chaining": "^7.13.12",
-    "@babel/plugin-proposal-async-generator-functions": "^7.13.15",
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/plugin-syntax-async-generators": "^7.8.4",
-    "@babel/helper-plugin-utils": "^7.13.0",
-    "@babel/helper-remap-async-to-generator": "^7.13.0",
-    "@babel/helper-replace-supers": "^7.13.0",
-    "@babel/helper-simple-access": "^7.12.1",
-    "@babel/helper-skip-transparent-expression-wrappers": "^7.12.1",
-    "@babel/helper-split-export-declaration": "^7.12.13",
-    "@babel/helper-validator-identifier": "^7.12.11",
-    "@babel/helper-validator-option": "^7.12.17",
-    "@babel/helper-wrap-function": "^7.13.0",
-    "@babel/helpers": "^7.12.1",
-    "@babel/highlight": "^7.10.4",
-    "@babel/parser": "^7.12.3",
-    "@babel/template": "^7.10.4",
-    "@babel/traverse": "^7.12.1",
-    "@babel/types": "^7.12.13",
+    "@babel/core": "^7.4.3",
     "@mapbox/svg-react-transformer-loader": "^1.0.6",
-    "babel-plugin-react-require": "^3.0.1",
-    "babel-plugin-root-import": "^6.1.0",
-    "babel-plugin-transform-define": "^1.3.0",
-    "browserslist": "^4.14.5",
-    "chalk": "^2.0.0",
-    "color-convert": "^1.9.0",
-    "color-name": "^1.1.3",
-    "convert-source-map": "^1.7.0",
-    "css-reset-and-normalize": "^1.0.1",
-    "debug": "^4.1.0",
-    "escape-string-regexp": "^1.0.5",
-    "file-saver": "^2.0.2",
+    "@types/parse-json": "^4.0.0",
+    "ajv-errors": "^1.0.1",
+    "amdefine": "^1.0.1",
+    "babel-plugin-react-require": "^3.1.3",
+    "babel-plugin-root-import": "^6.6.0",
+    "babel-plugin-transform-define": "^1.3.2",
+    "clap": "^1.2.3",
+    "colors": "^1.1.2",
+    "css-reset-and-normalize": "^1.2.0",
+    "dot-prop": "^5.3.0",
+    "emoji-regex": "^7.0.3",
+    "file-saver": "^2.0.5",
     "flipnote.js": "^5.4.2",
-    "gensync": "^1.0.0",
-    "globals": "^11.1.0",
-    "has-flag": "^3.0.0",
-    "hotkeys-js": "^3.6.13",
+    "fs-minipass": "^2.1.0",
+    "has-ansi": "^2.0.0",
+    "hotkeys-js": "^3.8.3",
     "immer": "^3.1.3",
-    "js-tokens": "^4.0.0",
-    "jsesc": "^2.5.1",
-    "json5": "^2.1.2",
-    "jszip": "^3.2.2",
-    "lodash": "^4.17.19",
-    "lodash.debounce": "^4.0.8",
-    "node-sass": "^4.12.0",
+    "indexes-of": "^1.0.1",
+    "is-buffer": "^1.1.6",
+    "json-parse-even-better-errors": "^2.3.1",
+    "jszip": "^3.6.0",
+    "lines-and-columns": "^1.1.6",
+    "locate-path": "^3.0.0",
+    "lodash.assignin": "^4.2.0",
+    "lodash.bind": "^4.2.1",
+    "lodash.defaults": "^4.2.0",
+    "lodash.filter": "^4.6.0",
+    "lodash.flatten": "^4.4.0",
+    "lodash.foreach": "^4.5.0",
+    "lodash.map": "^4.6.0",
+    "lodash.pick": "^4.4.0",
+    "lodash.reduce": "^4.6.0",
+    "lodash.reject": "^4.6.0",
+    "lodash.some": "^4.6.0",
+    "minipass-collect": "^1.0.2",
+    "minipass-flush": "^1.0.5",
+    "minipass-pipeline": "^1.2.4",
+    "nice-try": "^1.0.5",
+    "node-sass": "^4.14.1",
+    "parent-module": "^1.0.1",
+    "picomatch": "^2.2.3",
     "poi": "^12.10.3",
+    "prepend-http": "^1.0.4",
     "pullstate": "^1.3.1",
+    "query-string": "^4.3.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-dropzone": "^9.0.0",
     "react-router-dom": "^4.3.1",
     "react-transition-group": "^2.9.0",
-    "regexpu-core": "^4.7.1",
-    "resolve": "^1.3.2",
-    "sass-loader": "^7.1.0",
-    "semver": "^5.4.1",
-    "source-map": "^0.5.7",
-    "supports-color": "^5.3.0",
-    "to-fast-properties": "^2.0.0"
+    "remove-trailing-separator": "^1.1.0",
+    "sass-loader": "^7.3.1",
+    "sort-keys": "^1.1.2",
+    "uniq": "^1.0.1",
+    "upper-case-first": "^1.1.2",
+    "whet.extend": "^0.9.9",
+    "worker-farm": "^1.7.0",
+    "yaml": "^1.10.2"
   },
   "scripts": {
     "dev": "poi --serve",
