--- a/package.json
+++ b/package.json
@@ -3,70 +3,47 @@
   "version": "3.1.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.4.3",
-    "@mapbox/svg-react-transformer-loader": "^1.0.6",
-    "@types/parse-json": "^4.0.0",
-    "ajv-errors": "^1.0.1",
-    "amdefine": "^1.0.1",
-    "babel-plugin-react-require": "^3.1.3",
+    "@babel/core": "^7.23.3",
+    "@mapbox/svg-react-transformer": "^0.2.4",
+    "@mapbox/svg-react-transformer-loader": "^0.1.0",
+    "@types/file-saver": "^2.0.7",
+    "@types/poi": "^12.5.8",
+    "@types/react-transition-group": "^4.4.9",
+    "@vue/compiler-sfc": "^3.3.8",
+    "babel-plugin-react-require": "^4.0.2",
     "babel-plugin-root-import": "^6.6.0",
-    "babel-plugin-transform-define": "^1.3.2",
-    "clap": "^1.2.3",
-    "colors": "^1.1.2",
-    "css-reset-and-normalize": "^1.2.0",
-    "dot-prop": "^5.3.0",
-    "emoji-regex": "^7.0.3",
+    "babel-plugin-transform-define": "^2.1.4",
+    "css-reset-and-normalize": "^2.3.6",
     "file-saver": "^2.0.5",
-    "flipnote.js": "^5.4.2",
-    "fs-minipass": "^2.1.0",
-    "has-ansi": "^2.0.0",
-    "hotkeys-js": "^3.8.3",
-    "immer": "^3.1.3",
-    "indexes-of": "^1.0.1",
-    "is-buffer": "^1.1.6",
-    "json-parse-even-better-errors": "^2.3.1",
-    "jszip": "^3.6.0",
-    "lines-and-columns": "^1.1.6",
-    "locate-path": "^3.0.0",
-    "lodash.assignin": "^4.2.0",
-    "lodash.bind": "^4.2.1",
-    "lodash.defaults": "^4.2.0",
-    "lodash.filter": "^4.6.0",
-    "lodash.flatten": "^4.4.0",
-    "lodash.foreach": "^4.5.0",
-    "lodash.map": "^4.6.0",
-    "lodash.pick": "^4.4.0",
-    "lodash.reduce": "^4.6.0",
-    "lodash.reject": "^4.6.0",
-    "lodash.some": "^4.6.0",
-    "minipass-collect": "^1.0.2",
-    "minipass-flush": "^1.0.5",
-    "minipass-pipeline": "^1.2.4",
-    "nice-try": "^1.0.5",
-    "node-sass": "^4.14.1",
-    "parent-module": "^1.0.1",
-    "picomatch": "^2.2.3",
-    "poi": "^12.10.3",
-    "prepend-http": "^1.0.4",
-    "pullstate": "^1.3.1",
-    "query-string": "^4.3.4",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-dropzone": "^9.0.0",
-    "react-router-dom": "^4.3.1",
-    "react-transition-group": "^2.9.0",
-    "remove-trailing-separator": "^1.1.0",
-    "sass-loader": "^7.3.1",
-    "sort-keys": "^1.1.2",
-    "uniq": "^1.0.1",
-    "upper-case-first": "^1.1.2",
-    "whet.extend": "^0.9.9",
-    "worker-farm": "^1.7.0",
-    "yaml": "^1.10.2"
+    "flipnote.js": "^5.11.0",
+    "hotkeys-js": "^3.12.0",
+    "immer": "^10.0.3",
+    "jszip": "^3.10.1",
+    "node-sass": "^9.0.0",
+    "npm": "^10.2.4",
+    "poi": "^10.2.11",
+    "pullstate": "^1.25.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-native": "^0.72.7",
+    "react-router": "^6.18.0",
+    "react-router-dom": "^6.18.0",
+    "react-transition-group": "^4.4.5",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.2",
+    "v8-compile-cache": "^2.4.0"
   },
   "scripts": {
     "dev": "poi --serve",
     "build": "poi --prod",
     "manifest": "node ./scripts/generateManifest.js"
+  },
+  "devDependencies": {
+    "val-loader": "^5.0.1",
+    "vue-loader": "^17.3.1",
+    "vue-template-compiler": "^2.7.15",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   }
 }
